@@ -13,7 +13,7 @@
 from .exception import ScreenshotError
 from .factory import mss
 
-__version__ = '2.0.17'
+__version__ = '2.0.18'
 __author__ = "Mickaël 'Tiger-222' Schoentgen"
 __copyright__ = '''
     Copyright (c) 2013-2016, Mickaël 'Tiger-222' Schoentgen
