@@ -13,6 +13,7 @@ dev
       - Linux: insanely fast using only ctypes
       - Linux: skip unused monitors
       - Linux: use errcheck instead of deprecated restype with callable (fix #11)
+      - Linux: fix security issue (reported by Bandit)
 
 2.0.0   2016/06/04
       - split the module into several files
